arreglando errores de css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" media="screen" type="text/css" rel="stylesheet" />
     <link href="tableStyles.css" media="screen" type="text/css" rel="stylesheet" />
-    <link href="Documentacion.css" media="screen" type="text/css" rel="stylesheet" />
+    <link href="documentacion.css" media="screen" type="text/css" rel="stylesheet" />
     <title>Document</title>
 </head>
 <body>
@@ -102,36 +102,52 @@
           <h1 class="lenguajes">lenguajes de programacion</h1>
                <table>
                   <tr>
-                    <th style="width: 10%;">Idioma</th>
+                    <th style="width: 10%;">Lenguaje</th>
                     <th style="width: 100%;">Nivel</th>
                   </tr>
                   <tr>
-                    <td>Español</td>
-                    <td>Lengua Materna</td>
+                    <td>C++</td>
+                    <td>aprendí incluso antes de venir a la U, el lenguaje con el que mejor me ubico.</td>
                   </tr>
                   <tr>
-                      <td>Ingles</td>
-                      <td>Lo estudié desde que era pequeño, por lo que para mi es incluso mas 
-                       facil recordar palabras en ingles que en español, estoy seguro que si
-                       necesitan un certificado en Ingles seria facil para mi ir y conseguirlo.
+                      <td>C#</td>
+                      <td>vi menos que c++ pero igual hice proyectos con c#.
                       </td>
                   </tr>
                   <tr>
-                      <td>Portugues</td>
-                      <td>Mi padre nació en Brasil, todos los libros que tenia en casa estaban en Portugues
-                       y tenia que escuchar a algunos tios hablar igual, pero no soy capaz de escribir en portugues.
+                      <td>Python</td>
+                      <td>empecé a ver python hace 1 año e hice proyectos de machine learning con esto.
                       </td>
                   </tr>
                   <tr>
-                      <td>Frances</td>
-                      <td>Pase clases durante 2 años en la alianza francesa y tengo el certificado de nivel A2</td>
+                      <td>Javascript</td>
+                      <td>estoy viendo desde este año, pero ya soy capaz de hacer diversos proyectos con esto.</td>
                   </tr>
                   <tr>
-                      <td>Alemán</td>
-                      <td>Pase clases durante 3 años en el icba en Cochabamba y termine las clases de B1, deje el nivel B2 
-                       a la mitad por lo que tendria que retomarlo para conseguir el diploma de nivel avanzado.
+                      <td>HTML y CSS</td>
+                      <td> Empecé a ver desde este semestre, cada vez mejorando como se pueda ver la pagina web y yo
+                        creo que tengo buen ojo para eso.
                       </td>
                   </tr>
+                  <tr>
+                     <td>PowerBI</td>
+                     <td>
+                        Se manejar de manera sencilla y estoy actualmente estudiando para un certificado de microsoft
+                        de esto para conseguir mejor empleo.
+                     </td>
+                 </tr>
+                 <tr>
+                  <td>SQL</td>
+                  <td>
+                     Vi un poco de esto en base de datos y puedo manejar una base de datos sencilla y hacer querys en ella.
+                  </td>
+               </tr>
+               <tr>
+                  <td>Unity</td>
+                  <td>
+                     se programar juegos en ella, hice proyectos con esto en mi colegio.
+                  </td>
+               </tr>
                 </table>
     <a name="certificacion"></a>
     <h1 class="certificacion">Certificación</h1>
