--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
    <ul>
       <li><a href="#section-container">Quien soy</a></li>
-      <li><a href="#estudios">estudios</a></li>
-      <li><a href="#lenguajes">lenguajes de programacion</a></li>
-      <li><a href="#certificacion">certificacion</a></li>
+      <li><a href="#estudios">Estudios</a></li>
+      <li><a href="#lenguajes">Lenguajes de programacion</a></li>
+      <li><a href="#certificacion">Certificacion</a></li>
+      <li><a href="#contacto">Contacto</a></li>
    </ul>
    <a name="section-container"></a>
     <div class="section-container">
@@ -246,5 +247,22 @@
       </div>
       </div>
    </section>
+   <a name="contacto"></a>
+    <h1 class="contacto">Contacto</h1>
+    <div class="contenedor-flexible-1">
+         <a href="https://github.com/Ogreaggressive">
+         <img alt="Qries" src="images/GitHub-Mark.png"
+          height="70">
+         </a>
+         <a href="https://www.instagram.com/nicolascarir/?hl=es">
+            <img alt="Qries" src="images/instagram-png-instagram-png-logo-1455.png"
+             height="70">
+         </a>
+         <a href="https://www.linkedin.com/in/nicolas-cari-659815252/">
+            <img alt="Qries" src="images/linkedin.png"
+             height="70">
+         </a>
+    </div>
+   
  </body>
 </html>
